// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<FLPSelect /> > should render as expected 1`] = `
<body>
  <div>
    <div
      class="d_flex flex-d_column ai_stretch gap_8px w_100%"
    >
      <label
        class="fs_sm fw_medium c_text.primary"
        for="label"
      >
        label
      </label>
      <div
        style="flex-grow: 1; flex-shrink: 1; flex-basis: 0%;"
      >
        <select
          class="w_100% p_10px_14px fs_sm bdr_sm bd_1px_solid bd-c_border bg-c_surface c_text.primary ring_none trs_all_0.2s cursor_pointer focus:bd-c_primary focus:bx-sh_0_0_0_1px_token(colors.primary) "
          id="label"
        >
          <option
            style="background-color: var(--colors-surface); color: var(--colors-text-primary);"
            value="1"
          >
            1
          </option>
          <option
            style="background-color: var(--colors-surface); color: var(--colors-text-primary);"
            value="2"
          >
            2
          </option>
          <option
            style="background-color: var(--colors-surface); color: var(--colors-text-primary);"
            value="3"
          >
            3
          </option>
        </select>
      </div>
    </div>
  </div>
</body>
`;

exports[`<FLPSelect /> > should render as expected as row 1`] = `
<body>
  <div>
    <div
      class="d_flex flex-d_row ai_center gap_16px w_100%"
    >
      <label
        class="fs_sm fw_medium c_text.primary"
        for="label"
      >
        label
      </label>
      <div
        style="flex-grow: 1; flex-shrink: 1; flex-basis: 0%;"
      >
        <select
          class="w_100% p_10px_14px fs_sm bdr_sm bd_1px_solid bd-c_border bg-c_surface c_text.primary ring_none trs_all_0.2s cursor_pointer focus:bd-c_primary focus:bx-sh_0_0_0_1px_token(colors.primary) "
          id="label"
        >
          <option
            style="background-color: var(--colors-surface); color: var(--colors-text-primary);"
            value="1"
          >
            1
          </option>
          <option
            style="background-color: var(--colors-surface); color: var(--colors-text-primary);"
            value="2"
          >
            2
          </option>
          <option
            style="background-color: var(--colors-surface); color: var(--colors-text-primary);"
            value="3"
          >
            3
          </option>
        </select>
      </div>
    </div>
  </div>
</body>
`;
